# xarope

./: .gitignore  Cargo.toml  README.md
fixtures/: basic.csv  chargeback_no_funds.csv  insufficient_funds.csv  negative_balance.csv  postponed_chargeback.csv  resolve.csv  whitespace_variations.csv
profiling/: v1.md  v2.md  v3.md  v4.md
src/: generator.rs  main.rs
